--- a/src/com/mypos/product/view/ProductPanel.form
+++ b/src/com/mypos/product/view/ProductPanel.form
@@ -37,7 +37,7 @@
                   <Group type="102" attributes="0">
                       <Component id="InputProduct" min="-2" pref="230" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="SearchProduct" min="-2" pref="44" max="-2" attributes="0"/>
+                      <Component id="BtnSearchProduct" min="-2" pref="44" max="-2" attributes="0"/>
                       <EmptySpace pref="306" max="32767" attributes="0"/>
                       <Component id="StockFilter" min="-2" pref="107" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
@@ -56,14 +56,14 @@
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Component id="jLabel2" min="-2" pref="25" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="AddProduct" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="CategoryFilter" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="StockFilter" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="InputProduct" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="SearchProduct" min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="BtnSearchProduct" max="32767" attributes="0"/>
+                  <Component id="InputProduct" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="438" max="-2" attributes="0"/>
@@ -100,10 +100,12 @@
         <Property name="text" type="java.lang.String" value="Search a product..."/>
       </Properties>
       <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="InputProductFocusGained"/>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="InputProductFocusLost"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="InputProductActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="SearchProduct">
+    <Component class="javax.swing.JButton" name="BtnSearchProduct">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="cc" red="cc" type="rgb"/>
@@ -116,7 +118,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SearchProductActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnSearchProductActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="CategoryFilter">
